force-app/main/default/objects/Internal_Activities__c/Internal_Activities__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Internal Activities</label>
</CustomObject>