force-app/main/default/objects/Internal_Activities__c/fields/Allowed_Absence_Field__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Absence_Field__c</fullName>
    <label>Allowed Absence Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>