force-app/main/default/objects/Internal_Activities__c/fields/Availability_Field__c.field-meta.xml
<CustomField>
    <fullName>Availability_Field__c</fullName>
    <label>Availability Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>